--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
-    <title>Horiseon Business Management</title><!--changed the title to be more specific-->
+    <title>Horiseon Social Solution Services</title><!--changed the title to be more specific-->
 </head>
 <!--changed relative pathing for the CSS link and all the images. 
 My CSS wasn't working after I was troubleshooting the page not loading
